--- a/index.html
+++ b/index.html
@@ -11,25 +11,24 @@
 
 <body>
     <main class="container">
-    
-    <section>
-        <h1>JavaScript Quiz</h1>
-        <button onclick = "startQuiz()">Start Quiz</button>
-        <div id = "quiz"></div>
-        <div id = "result"></div>
-        <div id = "score"></div>
-        <div id = "timer">Time Remaining: <span id="time">30</span></div>
-    </section>
 
-    <section id="score-section">
-        <h3>Save Score</h3>
-    <div class="storage">
-        <textbox for = "user"> Name: </textbox>
-        <input type = "text" id = "user">
-        <button id = "saveButton"> Save</button>
-      <!-- <button onclick = "startNewGame()"> Play Again</button>-->
-    </div>
-    </section>
+        <section>
+            <h1>JavaScript Quiz</h1>
+            <button id="startButton">Start Quiz</button>
+            <div id="quiz"></div>
+            <div id="result"></div>
+            <div id="score"></div>
+            <div id="timer">Time Remaining: <span id="time">30</span></div>
+        </section>
+
+        <section id="score-section">
+            <h3>Save Score</h3>
+            <div class="storage">
+                <textbox for="user"> Name: </textbox>
+                <input type="text" id="user">
+                <button id="saveButton"> Save</button>
+            </div>
+        </section>
 
     </main>
 </body>
