--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content=" Illustrator: Robinson Dos Santos, Reviewed & Modified by: Robinson Dos Santos, 
+    Category: Homework Challenge" />
     <meta name="viewport" content="width=device-width" , initial-scale="1.0">
     <title>JavaScript Quiz</title>
     <link rel="stylesheet" href="./style.css">
@@ -14,6 +16,11 @@
 
         <section>
             <h1>JavaScript Quiz</h1>
+            <div id="explain">
+                <p>You have 30 seconds to answer 7 questions and prove your knowledge about JavaScript.</p>
+                <p>Each right answer gives you 10 points!</p>
+                <p>You will immediately be penalized by 5 seconds for each wrong answer.</p>
+            </div>
             <button id="startButton">Start Quiz</button>
             <div id="quiz"></div>
             <div id="result"></div>
